--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,11 @@
 Package: eDNAPlus
 Type: Package
-Title: What the Package Does Using Title Case
+Title: Models for metabarcoding data
 Version: 1.0
 Date: 2022-04-26
 Author: alexdiana1992
-Maintainer: alexdiana1992 <ad625@kent.ac.uk>
-Description: More details about what the package does. See
-           <http://cran.r-project.org/doc/manuals/r-release/R-exts.html#The-DESCRIPTION-file> for
-           details on how to write this part.
+Maintainer: alexdiana1992 <a.diana@kent.ac.uk>
+Description: Implements the model for metabarcoding data described in the paper ..
 License: GPL (>= 2)
 Encoding: UTF-8
 RoxygenNote: 7.1.2
@@ -17,3 +15,8 @@ Imports:
   ggplot2,
   MASS
 LinkingTo: Rcpp, RcppArmadillo
+LazyData: true
+Suggests: 
+    rmarkdown,
+    knitr
+VignetteBuilder: knitr
