--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,8 +11,9 @@ Encoding: UTF-8
 RoxygenNote: 7.1.2
 Imports: 
   Rcpp (>= 1.0.7),
-  GIGrvg,
-  ggplot2,
+  GIGrvg
+Depends: 
+ ggplot2,
   MASS
 LinkingTo: Rcpp, RcppArmadillo
 LazyData: true
